# heimdall-asis

./: .gitignore  README.md  pyproject.toml
cloud/: .env  app.py
data/: asis.duckdb
data/input/meta_mapping/: test_timeseries_input.parquet
data/output/: meta_mapping_results_20251212_003124.parquet  timeseries_data_20251212_003708.parquet
docs/: .clinerules  0_Data Ingestion (Bronze Layer).md  1_Data Clean (Silver Layer).md  3-sandbox.md  ARCHITECTURE_MAP.md  DATA_PIPELINE_ARCHITECTURE.md  PHASE_4_COMPLETION_SUMMARY.md  Phase1_Requirements.md  README.md  TEMPLATE.md  project-guide.md
local/config/: .env  __init__.py  config.py  source_config.yaml
local/src/: catalog_sync.py  confirmation.py  ingestion.py
local/src/adapters/: __init__.py  adapter_factory.py  adapter_manager.py  base.py  fred.py  http_client.py  newsapi_adapter.py  rss_adapter.py  web_scraper.py  yfinance_adapter.py
local/src/audit/: check_deployment.py  gold_pipeline.py  llm_auditor.py  micro_audit_engine.py
local/src/cleaners/: base_cleaner.py  fred_cleaner.py  newsapi_cleaner.py  rss_cleaner.py  yfinance_cleaner.py
local/src/database/: __init__.py  database_core.py  db_operations.py  init_db.py  migrator.py  schema_checker.py
local/src/pipeline/: batch_orchestrator.py  cleaning_pipeline.py  incremental_ingestion.py  ingestion.py
local/src/tests/: test_adapter_manager.py  test_adapters.py  test_database_core.py  validators.py
scripts/: background_scheduler.py  batch_ingestion.sh  check_schema.py  confirm_all_assets.py  init_db.py  init_duckdb.py  load_parquet_to_duckdb.py  migrate_db.py  run_batch_ingestion.py  run_core_demo.py  run_pipeline_demo.py  run_timeseries_demo.py  simple_view.py  view_data_simple.py  view_duckdb_data.py
shared/: constants.py
shared/schemas/: models.py
src/: main.py
src/adapters/: .gitkeep  api_client.py  config.py  dbnomics_fetcher.py  duckdb_storage.py  input_handler.py  logging.py  output_handler.py
src/core/: .gitkeep  dbnomics_map.py  dbnomics_timeseries.py
src/pipelines/: .gitkeep  base.py  dbnomics_map_pipeline.py  dbnomics_timeseries_pipeline.py
src/ui/: .gitkeep
