[tool.poetry]
name = "heimdall-asis"
version = "0.1.0"
description = "ASIS: Automated Strategic Intelligence System. A local-first, low-resource intelligence pipeline using DuckDB, Gemini Flash, and Pragmatic Clean Architecture."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^1.1.3"
pandas = "^2.2.3"
streamlit = "^1.40.2"
loguru = "^0.7.3"
google-generativeai = "^0.8.3"
python-dotenv = "^1.0.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
