[tool.poetry]
name = "heimdall-asis"
version = "0.1.0"
description = "Automated Strategic Intelligence System"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "^0.9.0"
google-generativeai = "^0.3.0"
streamlit = "^1.28.0"
pandas = "^2.0.0"
dask = "^2023.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"